--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="mainpic">
-            <img src="../Lesson 5/pics/Elon-Musk-2022.webp" class="elon_musk">
+            <img src="img/Elon-Musk-2022.webp" class="elon_musk">
         </div>
 
         <div class="maininfo">
@@ -27,10 +27,10 @@
                 <h1 class="h1ofdown">Team of Space X</h1>
             </div>
             <div class="picsofdown">
-                <img src="pics/female.png" alt="" class="pic" id="picone">
-                <img src="pics/teslamen.png" alt="" class="pic" id="pictwo">
-                <img src="pics/male.png" alt="" class="pic" id="picthree">
-            </div>
+                <img src="img/female.png" alt="" class="pic" id="picone">
+                <img src="img/teslamen.png" alt="" class="pic" id="pictwo">
+                <img src="img/male.png" alt="" class="pic" id="picthree">
+            </div>¦
             <div class="textlar">
                 <h3>Sonya Blade</h3>
                 <h3>Johny Cage</h3>
